syntax = "proto3";

package v2ray.core.common.net;
option go_package = "net";
option java_package = "com.v2ray.core.common.net";
option java_outer_classname = "AddressProto";

message AddressPB {
  oneof address {
    bytes ip = 1;
    string domain = 2;
  }
}